# cfd9

./: .gitignore  PROJECT_HISTORY.md  README.md  local.bash  main.py  pyproject.toml
analysis/: compute_ucns3d_metrics.README.md  compute_ucns3d_metrics.py  eulerian_density_plots.py  mesh_convergence.py  mix_mass.py  monitor_runs.py  plot_optimisation.py  pseudocolour_montage.bash  pseudocolour_montage.py  pseudocolour_temporal.py  qualitative_comparison.py  qualitative_comparison.visit.py  render_haas_sturtevant.py  render_vtu.visit.py  render_vtu_plots.README.md  render_vtu_plots.py  render_vtu_time_series.py  schlieren_t0.visit.py  test_enstrophy.py  track_interfaces.py
analysis/old/: combine_pvtu_workaround.py  enstrophy.py  enstrophy_combo.py  mesh_characteristics.pyvista.py  postprocessed_schlieren.visit.py  vorcitity.visit.py  weno_comparison.py
analysis/tests/: read_vtu_density.py  visit_vtu_smoke.py
cases/: generate_cases.py
cases/convergence/: README.md  convergence1.bash  generate_water_air.py
cases/haas_sturtevant/: README.md  generate_cases.py  generate_helium.py  generate_r22.py
meshing/: generate_mesh_suites.py  make_channel_mesh.py
optimisation/: README.md  __init__.py  example_driver.py  ucns3d_pymoo.py  water_air_single_bubble_driver.py
presentation/: generate_project_deck.py
report/: bibliography.bib  s421374_irp_2026.tex
scripts/: convergence1.bash
